--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -1,2 +1,4 @@
 FROM ubuntu:latest
-RUN apt update && apt install apache2 -y
+RUN apt update && apt install nginx -y
+COPY default.conf /etc/nginx/sites-enabled/default
+CMD ["nginx", "-g", "daemon off;"]
