--- a/service-apache-alb.yaml
+++ b/service-apache-alb.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: node-port-service
-  namespace: game
+  name: apache-port-service
+  namespace: "game"
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
-    environment: development 
+    environment: apache
   ports:
   - port: 80
     targetPort: 80
